--- a/MyMoment/MovieDetailViewController.xib
+++ b/MyMoment/MovieDetailViewController.xib
@@ -13,7 +13,7 @@
                 <outlet property="fourScoreBtn" destination="Tms-eE-WCr" id="mf0-nl-KaM"/>
                 <outlet property="imageView" destination="PLH-Nr-5cP" id="Ngo-5L-28H"/>
                 <outlet property="introductionLabel" destination="r2O-IQ-S5h" id="gsI-ne-Clh"/>
-                <outlet property="messageTableView" destination="RJj-4y-19a" id="TV3-Df-PpZ"/>
+                <outlet property="messageTableView" destination="RJj-4y-19a" id="9hH-Zp-YuE"/>
                 <outlet property="messageTextField" destination="L8W-WW-SuI" id="wIc-Kh-q8s"/>
                 <outlet property="nameLabel" destination="HEZ-Km-r0G" id="kUU-EE-eQr"/>
                 <outlet property="oneScoreBtn" destination="A7w-Qp-SAg" id="48o-is-Ckg"/>
@@ -130,7 +130,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="625" height="93"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" alternatingRowBackgroundColors="YES" columnSelection="YES" multipleSelection="NO" autosaveColumns="NO" id="RJj-4y-19a">
+                            <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" alternatingRowBackgroundColors="YES" columnSelection="YES" multipleSelection="NO" autosaveColumns="NO" rowSizeStyle="automatic" viewBased="YES" id="RJj-4y-19a">
                                 <rect key="frame" x="0.0" y="0.0" width="625" height="93"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <animations/>
@@ -150,6 +150,18 @@
                                             <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
                                         </textFieldCell>
                                         <tableColumnResizingMask key="resizingMask" resizeWithTable="YES" userResizable="YES"/>
+                                        <prototypeCellViews>
+                                            <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" id="Ftm-gT-5kj">
+                                                <rect key="frame" x="1" y="2" width="154" height="17"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                                                <animations/>
+                                                <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Label" id="nck-0M-3dz">
+                                                    <font key="font" metaFont="system"/>
+                                                    <color key="textColor" name="selectedMenuItemColor" catalog="System" colorSpace="catalog"/>
+                                                    <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                                                </textFieldCell>
+                                            </textField>
+                                        </prototypeCellViews>
                                     </tableColumn>
                                     <tableColumn identifier="comment" width="295" minWidth="10" maxWidth="3.4028234663852886e+38" id="Pva-S8-r8n">
                                         <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border" alignment="left">
@@ -163,6 +175,18 @@
                                             <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
                                         </textFieldCell>
                                         <tableColumnResizingMask key="resizingMask" resizeWithTable="YES" userResizable="YES"/>
+                                        <prototypeCellViews>
+                                            <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" id="rQm-Jy-DLz">
+                                                <rect key="frame" x="158" y="2" width="295" height="17"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                                                <animations/>
+                                                <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Label" id="lMr-qd-QGI">
+                                                    <font key="font" metaFont="system"/>
+                                                    <color key="textColor" name="selectedMenuItemColor" catalog="System" colorSpace="catalog"/>
+                                                    <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                                                </textFieldCell>
+                                            </textField>
+                                        </prototypeCellViews>
                                     </tableColumn>
                                     <tableColumn identifier="time" width="167" minWidth="10" maxWidth="3.4028234663852886e+38" id="8Na-ks-Q5a">
                                         <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border" alignment="left">
@@ -176,11 +200,23 @@
                                             <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
                                         </textFieldCell>
                                         <tableColumnResizingMask key="resizingMask" resizeWithTable="YES" userResizable="YES"/>
+                                        <prototypeCellViews>
+                                            <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" id="43p-Qr-81k">
+                                                <rect key="frame" x="456" y="2" width="167" height="17"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                                                <animations/>
+                                                <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Label" id="r1a-iH-vQs">
+                                                    <font key="font" metaFont="system"/>
+                                                    <color key="textColor" name="selectedMenuItemColor" catalog="System" colorSpace="catalog"/>
+                                                    <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                                                </textFieldCell>
+                                            </textField>
+                                        </prototypeCellViews>
                                     </tableColumn>
                                 </tableColumns>
                                 <connections>
-                                    <outlet property="dataSource" destination="8h9-1T-KI1" id="3VD-4A-RcX"/>
-                                    <outlet property="delegate" destination="8h9-1T-KI1" id="hI6-dC-1DD"/>
+                                    <outlet property="dataSource" destination="-2" id="it3-Rq-n6Z"/>
+                                    <outlet property="delegate" destination="-2" id="DoT-4H-hth"/>
                                 </connections>
                             </tableView>
                         </subviews>
@@ -298,7 +334,6 @@
             <animations/>
             <point key="canvasLocation" x="125" y="298"/>
         </customView>
-        <customObject id="8h9-1T-KI1" customClass="MessageTableViewController"/>
     </objects>
     <resources>
         <image name="1star" width="30.719999313354492" height="29.280000686645508"/>
