Add Music Content and update searching function
增加音乐内容，晚上搜索功能

--- a/MyMoment/MovieDetailViewController.xib
+++ b/MyMoment/MovieDetailViewController.xib
@@ -33,27 +33,27 @@
             <rect key="frame" x="0.0" y="0.0" width="846" height="468"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <subviews>
-                <scrollView fixedFrame="YES" horizontalLineScroll="20" horizontalPageScroll="10" verticalLineScroll="19" verticalPageScroll="10" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Cg4-UG-4Ux">
+                <scrollView fixedFrame="YES" horizontalLineScroll="20" horizontalPageScroll="10" verticalLineScroll="19" verticalPageScroll="10" hasHorizontalScroller="NO" hasVerticalScroller="NO" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Cg4-UG-4Ux">
                     <rect key="frame" x="0.0" y="0.0" width="846" height="468"/>
                     <clipView key="contentView" ambiguous="YES" drawsBackground="NO" copiesOnScroll="NO" id="gQR-2f-mpG">
-                        <rect key="frame" x="1" y="1" width="829" height="451"/>
+                        <rect key="frame" x="1" y="1" width="844" height="466"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="YKT-fD-6nk">
-                                <rect key="frame" x="0.0" y="372" width="844" height="600"/>
+                                <rect key="frame" x="0.0" y="387" width="844" height="600"/>
                                 <animations/>
                             </view>
                         </subviews>
                         <animations/>
                     </clipView>
                     <animations/>
-                    <scroller key="horizontalScroller" canDrawConcurrently="YES" verticalHuggingPriority="750" horizontal="YES" id="V7g-wh-KEf">
-                        <rect key="frame" x="1" y="452" width="829" height="15"/>
+                    <scroller key="horizontalScroller" hidden="YES" canDrawConcurrently="YES" verticalHuggingPriority="750" horizontal="YES" id="V7g-wh-KEf">
+                        <rect key="frame" x="-100" y="-100" width="844" height="15"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <animations/>
                     </scroller>
-                    <scroller key="verticalScroller" canDrawConcurrently="YES" verticalHuggingPriority="750" doubleValue="0.88590604026845643" horizontal="NO" id="IYM-pT-sI2">
-                        <rect key="frame" x="830" y="1" width="15" height="451"/>
+                    <scroller key="verticalScroller" hidden="YES" canDrawConcurrently="YES" verticalHuggingPriority="750" doubleValue="0.88590604026845643" horizontal="NO" id="IYM-pT-sI2">
+                        <rect key="frame" x="-100" y="-100" width="15" height="451"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <animations/>
                     </scroller>
@@ -75,7 +75,7 @@
                     <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageAlignment="topLeft" imageScaling="proportionallyDown" image="澳门风云" id="9v3-UX-MlI"/>
                 </imageView>
                 <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="HEZ-Km-r0G">
-                    <rect key="frame" x="418" y="417" width="80" height="20"/>
+                    <rect key="frame" x="405" y="417" width="80" height="20"/>
                     <animations/>
                     <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="澳门风云" id="fiB-CI-PKb">
                         <font key="font" size="16" name=".PingFangSC-Semibold"/>
@@ -84,7 +84,7 @@
                     </textFieldCell>
                 </textField>
                 <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="TFF-k0-hwg">
-                    <rect key="frame" x="437" y="390" width="30" height="17"/>
+                    <rect key="frame" x="405" y="390" width="30" height="17"/>
                     <animations/>
                     <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="喜剧" id="J9c-Jm-BH0">
                         <font key="font" size="13" name=".PingFangSC-Regular"/>
@@ -225,7 +225,7 @@
                     </clipView>
                     <animations/>
                     <scroller key="horizontalScroller" hidden="YES" verticalHuggingPriority="750" horizontal="YES" id="gk7-Om-OMQ">
-                        <rect key="frame" x="-8" y="-15" width="0.0" height="15"/>
+                        <rect key="frame" x="0.0" y="-15" width="0.0" height="15"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <animations/>
                     </scroller>
@@ -332,7 +332,7 @@
                 </button>
             </subviews>
             <animations/>
-            <point key="canvasLocation" x="125" y="298"/>
+            <point key="canvasLocation" x="144" y="294"/>
         </customView>
     </objects>
     <resources>
